--- a/jupyter-notebooks/Prochlorococcus-metagenome-analysis-final.ipynb
+++ b/jupyter-notebooks/Prochlorococcus-metagenome-analysis-final.ipynb
@@ -148,6 +148,7 @@
    "source": [
     "#Make collection file\n",
     "\n",
+    "See Make-Collection-File.ipynb"
     "anvi-import-collection final_Prochlorococcus-GENOME-COLLECTION.txt -c databases/Prochlorococcus-CONTIGS.db -p databases/Prochlorococcus-MERGED/PROFILE.db -C Genomes"
    ]
   },
@@ -159,6 +160,7 @@
    "source": [
     "#Pangenome analysis\n",
     "\n",
+    "#Made internal genomes file using Make-Collection-File.ipynb"
     "#run pangenome analysis (pangenome.sh)\n",
     "anvi-gen-genomes-storage -i internal-genomes.txt -o ../databases/Prochlorococcus-ISOLATE-PAN-GENOMES.db\n",
     "anvi-pan-genome -g ../databases/Prochlorococcus-ISOLATE-PAN-GENOMES.db --use-ncbi-blast --minbit 0.5 --mcl-inflation 10 --project-name Prochloroccocus-ISOLATE-PAN --num-threads 20\n",
